--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Todo app</title>
-
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <!-- styles -->
+  <link rel="stylesheet" href="./styles.css" />
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -15,10 +20,59 @@
   </style>
 </head>
 <body>
+  <header>
+  </header>
+  <section id="app">
+    <nav id="app-nav">
+      <button>
+        Todo
+      </button>
+      <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26"><path fill="#FFF" fill-rule="evenodd" d="M13 21a1 1 0 011 1v3a1 1 0 11-2 0v-3a1 1 0 011-1zm-5.657-2.343a1 1 0 010 1.414l-2.121 2.121a1 1 0 01-1.414-1.414l2.12-2.121a1 1 0 011.415 0zm12.728 0l2.121 2.121a1 1 0 01-1.414 1.414l-2.121-2.12a1 1 0 011.414-1.415zM13 8a5 5 0 110 10 5 5 0 010-10zm12 4a1 1 0 110 2h-3a1 1 0 110-2h3zM4 12a1 1 0 110 2H1a1 1 0 110-2h3zm18.192-8.192a1 1 0 010 1.414l-2.12 2.121a1 1 0 01-1.415-1.414l2.121-2.121a1 1 0 011.414 0zm-16.97 0l2.121 2.12A1 1 0 015.93 7.344L3.808 5.222a1 1 0 011.414-1.414zM13 0a1 1 0 011 1v3a1 1 0 11-2 0V1a1 1 0 011-1z"/></svg>
+    </nav>
+    <form id="app-form">
+      <button class="check"></button>
+      <input type="text" name="new-todo" id="new-todo" placeholder="Create a new todo..." inputmode="text" enterkeyhint="done" /> 
+    </form>
+    <ul id="app-list">
+      <li>
+        <button class="check"></button>
+        <p class="task">Complete online JavaScript course</p>
+      </li>
+      <li>
+        <button class="check"></button>
+        <p class="task">Jog around the park 3x</p>
+      </li>
+      <li>
+        <button class="check"></button>
+        <p class="task">10 minutes meditation</p>
+      </li>
+      <li>
+        <button class="check"></button>
+        <p class="task">Read for 1 hour</p>
+      </li>
+      <li>
+        <button class="check"></button>
+        <p class="task">Pick up groceries</p>
+      </li>
+      <li>
+        <button class="check"></button>
+        <p class="task">Complete Todo App on Frontend Mentor</p>
+      </li>
+      <div>
+        <button>5 items left</button>
+        <li>
+          <button class="active">All</button>
+          <button>Active</button>
+          <button>Completed</button>
+        </li>
+        <button>Clear Completed</button>
+      </div>
+    </ul>
+  </section>
 
-  Todo
 
-  <!-- Add dynamic number --> items left
+
+  <!-- Add dynamic number items left
 
   All
   Active 
@@ -26,11 +80,11 @@
 
   Clear Completed
 
-  Drag and drop to reorder list
+  Drag and drop to reorder list -->
 
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
