--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <link rel="stylesheet" href="./styles.css" />
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
+    footer{
+      padding: 3rem;
+    }
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
@@ -37,26 +40,32 @@
       <li>
         <button class="check"></button>
         <p class="task">Complete online JavaScript course</p>
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"><path fill="#494C6B" fill-rule="evenodd" d="M16.97 0l.708.707L9.546 8.84l8.132 8.132-.707.707-8.132-8.132-8.132 8.132L0 16.97l8.132-8.132L0 .707.707 0 8.84 8.132 16.971 0z"/></svg>
       </li>
       <li>
         <button class="check"></button>
         <p class="task">Jog around the park 3x</p>
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"><path fill="#494C6B" fill-rule="evenodd" d="M16.97 0l.708.707L9.546 8.84l8.132 8.132-.707.707-8.132-8.132-8.132 8.132L0 16.97l8.132-8.132L0 .707.707 0 8.84 8.132 16.971 0z"/></svg>
       </li>
       <li>
         <button class="check"></button>
         <p class="task">10 minutes meditation</p>
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"><path fill="#494C6B" fill-rule="evenodd" d="M16.97 0l.708.707L9.546 8.84l8.132 8.132-.707.707-8.132-8.132-8.132 8.132L0 16.97l8.132-8.132L0 .707.707 0 8.84 8.132 16.971 0z"/></svg>
       </li>
       <li>
         <button class="check"></button>
         <p class="task">Read for 1 hour</p>
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"><path fill="#494C6B" fill-rule="evenodd" d="M16.97 0l.708.707L9.546 8.84l8.132 8.132-.707.707-8.132-8.132-8.132 8.132L0 16.97l8.132-8.132L0 .707.707 0 8.84 8.132 16.971 0z"/></svg>
       </li>
       <li>
         <button class="check"></button>
         <p class="task">Pick up groceries</p>
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"><path fill="#494C6B" fill-rule="evenodd" d="M16.97 0l.708.707L9.546 8.84l8.132 8.132-.707.707-8.132-8.132-8.132 8.132L0 16.97l8.132-8.132L0 .707.707 0 8.84 8.132 16.971 0z"/></svg>
       </li>
       <li>
         <button class="check"></button>
         <p class="task">Complete Todo App on Frontend Mentor</p>
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"><path fill="#494C6B" fill-rule="evenodd" d="M16.97 0l.708.707L9.546 8.84l8.132 8.132-.707.707-8.132-8.132-8.132 8.132L0 16.97l8.132-8.132L0 .707.707 0 8.84 8.132 16.971 0z"/></svg>
       </li>
       <div>
         <button>5 items left</button>
@@ -68,6 +77,11 @@
         <button>Clear Completed</button>
       </div>
     </ul>
+    <li>
+      <button class="active">All</button>
+      <button>Active</button>
+      <button>Completed</button>
+    </li>
   </section>
 
 
@@ -82,9 +96,11 @@
 
   Drag and drop to reorder list -->
 
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/waltcoder">waltcoder</a>.
+    </p>
+  </footer>
 </body>
 </html>
